# oidn

api/: CMakeLists.txt
include/OpenImageDenoise/: config.h.in
